# Acc-SpMM

./: CMakeLists.txt  README.md
Acc-SpMM-Reproduce/: CMakeLists.txt  README.md
Acc-SpMM-Reproduce/acc/: pipeline.cu  reorder.cpp
Acc-SpMM-Reproduce/dtc/: dtc_spmm.cu
Acc-SpMM/Acc-SpMM-Reproduce/acc/: reorder.hpp
Acc-SpMM/Acc-SpMM-Reproduce/baseline/: cusparse_spmm.hpp
Acc-SpMM/Acc-SpMM-Reproduce/benchmark/: benchmark.cpp  matrix_loader.cpp  matrix_loader.hpp
Acc-SpMM/Acc-SpMM-Reproduce/datasets/: README.txt
Acc-SpMM/Acc-SpMM-Reproduce/scripts/: run_remote.sh
acc/: bittcf.cpp  bittcf.hpp  pipeline.cu  pipeline.hpp  reorder.cpp  reorder.hpp
baseline/: cusparse_spmm.cu
benchmark/: benchmark.cpp  matrix_loader.cpp  matrix_loader.hpp
datasets/: README.txt  manifest.md  test.mtx
dtc/: dtc_spmm.hpp
scripts/: run_phase1_baseline.sh
